--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
 
 <h1 appHostlistener [borderColor]="'orange'">{{ title }}</h1>
 
-<h2 appHostlistener [borderColor]="'pink'">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fugiat architecto iste temporibus voluptatum
+<h2 appHostlistener [borderColor]="'pink'" [borderWidth]="5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro fugiat architecto iste temporibus voluptatum
     corporis quasi, provident expedita, atque velit laborum perspiciatis, tempore libero at consectetur placeat
     accusamus tempora suscipit?</h2>
